# software-center

./: README.md  com.github.softwarecenter.json  meson.build  software-center.spec
data/: com.github.softwarecenter.appdata.xml  com.github.softwarecenter.desktop  com.github.softwarecenter.gschema.xml  meson.build
data/icons/: meson.build
src/: about.py  arfedora-welcome.in  classesplugin.py  main.py  meson.build  software-center.in  window.py
src/plugins/: ArduinoIDE.py  ArduinoIDEv2.py  Ciano.py  Fritzing.py  GitKraken.py  HandBrake.py  Marker.py  MyPaint.py  PulseEffects.py  Skype.py  Viber.py  VidCutter.py  albasheer.py  android_studio_fedora.py  anydesk.py  atom_fedora.py  audacity_freeworld_fedora.py  blender_fedora.py  blender_flatpak.py  brave.py  broadcom_fedora.py  chromium_fedora.py  codeblocks_fedora.py  codecs_fedora_f31.py  compression_fedora.py  darktable_fedora.py  darktable_flatpak.py  dnf_fastestmirror.py  dnf_keepcache.py  edge.py  ffmpegthumbs_fedora.py  ffmpegthumbs_fedora_xfce.py  firefox_fedora.py  firefox_flatpak.py  flameshot_fedora.py  fonts_fedora.py  geany_fedora.py  gimp_beta_flatpak_fedora.py  gimp_fedora.py  gnome_12h.py  (+33 more)
